crates/parsing/tests/snapshots/parser__type_parenthesized_function.snap
---
source: crates/parsing/tests/parser.rs
expression: "(node, errors)"
snapshot_kind: text
---
(
    Module@0..87
      ModuleHeader@0..38
        MODULE@0..6 "module"
        ModuleName@6..32
          Annotation@6..7
            TEXT@6..7 " "
          UPPER@7..32 "TypeParenthesizedFunc ..."
        ModuleExportList@32..32
        Annotation@32..33
          TEXT@32..33 " "
        WHERE@33..38 "where"
      LAYOUT_START@38..38 ""
      ModuleImports@38..38
      ModuleStatements@38..86
        ValueSignature@38..86
          Annotation@38..40
            TEXT@38..40 "\n\n"
          LOWER@40..48 "function"
          Annotation@48..49
            TEXT@48..49 " "
          DOUBLE_COLON@49..51 "::"
          TypeForall@51..86
            Annotation@51..52
              TEXT@51..52 " "
            FORALL@52..58 "forall"
            TypeVariableBinding@58..60
              Annotation@58..59
                TEXT@58..59 " "
              LOWER@59..60 "a"
            TypeVariableBinding@60..62
              Annotation@60..61
                TEXT@60..61 " "
              LOWER@61..62 "b"
            PERIOD@62..63 "."
            TypeParenthesized@63..86
              Annotation@63..64
                TEXT@63..64 " "
              LEFT_PARENTHESIS@64..65 "("
              TypeArrow@65..85
                TypeParenthesized@65..73
                  LEFT_PARENTHESIS@65..66 "("
                  TypeArrow@66..72
                    TypeVariable@66..67
                      LOWER@66..67 "a"
                    Annotation@67..68
                      TEXT@67..68 " "
                    RIGHT_ARROW@68..70 "->"
                    TypeVariable@70..72
                      Annotation@70..71
                        TEXT@70..71 " "
                      LOWER@71..72 "b"
                  RIGHT_PARENTHESIS@72..73 ")"
                Annotation@73..74
                  TEXT@73..74 " "
                RIGHT_ARROW@74..76 "->"
                TypeParenthesized@76..85
                  Annotation@76..77
                    TEXT@76..77 " "
                  LEFT_PARENTHESIS@77..78 "("
                  TypeArrow@78..84
                    TypeVariable@78..79
                      LOWER@78..79 "a"
                    Annotation@79..80
                      TEXT@79..80 " "
                    RIGHT_ARROW@80..82 "->"
                    TypeVariable@82..84
                      Annotation@82..83
                        TEXT@82..83 " "
                      LOWER@83..84 "b"
                  RIGHT_PARENTHESIS@84..85 ")"
              RIGHT_PARENTHESIS@85..86 ")"
      LAYOUT_END@86..86 ""
      Annotation@86..87
        TEXT@86..87 "\n"
      END_OF_FILE@87..87 ""
    ,
    [],
)
