crates/parsing/tests/snapshots/parser__type_synonym.snap
---
source: crates/parsing/tests/parser.rs
expression: "(node, errors)"
snapshot_kind: text
---
(
    Module@0..111
      ModuleHeader@0..24
        MODULE@0..6 "module"
        ModuleName@6..18
          Annotation@6..7
            TEXT@6..7 " "
          UPPER@7..18 "TypeSynonym"
        ModuleExportList@18..18
        Annotation@18..19
          TEXT@18..19 " "
        WHERE@19..24 "where"
      LAYOUT_START@24..24 ""
      ModuleImports@24..24
      ModuleStatements@24..110
        TypeSynonymSignature@24..43
          Annotation@24..26
            TEXT@24..26 "\n\n"
          TYPE@26..30 "type"
          Annotation@30..31
            TEXT@30..31 " "
          UPPER@31..35 "Year"
          Annotation@35..36
            TEXT@35..36 " "
          DOUBLE_COLON@36..38 "::"
          TypeConstructor@38..43
            QualifiedName@38..43
              Annotation@38..39
                TEXT@38..39 " "
              UPPER@39..43 "Type"
        LAYOUT_SEPARATOR@43..43 ""
        TypeSynonymEquation@43..59
          Annotation@43..44
            TEXT@43..44 "\n"
          TYPE@44..48 "type"
          Annotation@48..49
            TEXT@48..49 " "
          UPPER@49..53 "Year"
          Annotation@53..54
            TEXT@53..54 " "
          EQUAL@54..55 "="
          TypeConstructor@55..59
            QualifiedName@55..59
              Annotation@55..56
                TEXT@55..56 " "
              UPPER@56..59 "Int"
        LAYOUT_SEPARATOR@59..59 ""
        TypeSynonymSignature@59..90
          Annotation@59..61
            TEXT@59..61 "\n\n"
          TYPE@61..65 "type"
          Annotation@65..66
            TEXT@65..66 " "
          UPPER@66..74 "Identity"
          Annotation@74..75
            TEXT@74..75 " "
          DOUBLE_COLON@75..77 "::"
          TypeArrow@77..90
            TypeConstructor@77..82
              QualifiedName@77..82
                Annotation@77..78
                  TEXT@77..78 " "
                UPPER@78..82 "Type"
            Annotation@82..83
              TEXT@82..83 " "
            RIGHT_ARROW@83..85 "->"
            TypeConstructor@85..90
              QualifiedName@85..90
                Annotation@85..86
                  TEXT@85..86 " "
                UPPER@86..90 "Type"
        LAYOUT_SEPARATOR@90..90 ""
        TypeSynonymEquation@90..110
          Annotation@90..91
            TEXT@90..91 "\n"
          TYPE@91..95 "type"
          Annotation@95..96
            TEXT@95..96 " "
          UPPER@96..104 "Identity"
          TypeVariableBinding@104..106
            Annotation@104..105
              TEXT@104..105 " "
            LOWER@105..106 "a"
          Annotation@106..107
            TEXT@106..107 " "
          EQUAL@107..108 "="
          TypeVariable@108..110
            Annotation@108..109
              TEXT@108..109 " "
            LOWER@109..110 "a"
      LAYOUT_END@110..110 ""
      Annotation@110..111
        TEXT@110..111 "\n"
      END_OF_FILE@111..111 ""
    ,
    [],
)
